# meddash

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  compose.yaml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/backend/: __init__.py  app.py  models.py  orchestrator.py  store.py
backend/tests/: test_api.py
docs/: api-contract.md  architecture.md  local-dev.md  safety-compliance.md
frontend/: Dockerfile  eslint.config.js  package.json  playwright.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  mock-data.ts  types.ts
frontend/tests/: app.spec.ts
